--- a/class-10/demo/debugging-salmon-cookies/more-errors/index.html
+++ b/class-10/demo/debugging-salmon-cookies/more-errors/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <title>Salmon Cookies</title>
 </head>
