--- a/class-10/demo/debugging-salmon-cookies/more-errors/data.html
+++ b/class-10/demo/debugging-salmon-cookies/more-errors/data.html
@@ -44,7 +44,7 @@
 <div id="tableScroll">
 <table id="standsTable"></table>
 </div>
-<script href="app.js">
+<script src="app.js">
     
   </script>
   </body>
